public/assets/style/index.css
/*Fonts */

@font-face {
    font-family: Lovelo;
    src: url(../fonts/Lovelo\ Black.otf);
}


.roboto-uniquifier {
    font-family: "Roboto", sans-serif;
    font-optical-sizing: auto;
    font-weight: weight;
    font-style: normal;
    font-variation-settings:
        "wdth" 100;
}

.margem-top {
    margin-top: 100px;
}

body {
    background-color: white;
    margin: 0;
    width: 100%;

}

main {
    padding-top: 93.06px ;
    width: auto;
    height: 100dvh;

    justify-content: center;
    align-items: center;
}




h1 {
    font-family: Lovelo;
    font-weight: normal;
    font-size: 40pt;


}

p {
    font-family: Roboto;
    color: rgb(0, 0, 0);
    text-align: justify;
    margin-left: 5px;
    margin-bottom: 4rem;
}
/* Coloca o texto do hero alinhado pro centro */
@media (max-width: 1200px) {
    h1 {
        text-align: center;
    }

    p {
        text-align: center;
        margin-left: 0px;
    }

}

span {
    font-family: Roboto;
}

label {
    font-family: Roboto;
}

h4 {
    width: 50%;
    color: rgba(0, 0, 0, 0.359);

    text-align: justify;
    font-size: 10pt;
    font-family: Roboto;
    font-weight: normal;

    margin: 0;
}

h3 {
    width: 50%;
    color: rgba(0, 0, 0, 0.57);
    font-size: 12pt;
    margin: 0;

    text-align: center;
    font-family: Roboto;
    font-weight: normal;
}

/* HEADER */
header {
    background-color: #ffffff;
    position: fixed;
    width: 100%;
    box-shadow: 0px 3px 9px 0px #0000001c;
    z-index: 2;
}
/* Faz o risco apareer quando a tela é pequena */
@media (max-width: 992px) {
    ul {

        border-top: 1px solid #1700ad75;
        margin-top: 15px;
        padding-top: 10px;


    }
}

#logo{
    display: none !important;
}

.hide-button{
    display: flex;
    position: absolute;
    width: 20%;
    height: 700px;
    z-index: 5;
    background-color: rgba(255, 255, 255, 0);
    justify-self: end;
    justify-content: end;
    align-items: end;
}

.hide{
    position: static;
    width: 100%;
    height: 60px;

    background-color: #ffffff;
}

.navbar-brand {
    img {
        width: 50px;
    }
}

.nav-item {
    border-radius: 5px;
    padding: 0px 0.5rem;
    width: fit-content;
    transition: ease-in-out 0.3s;
    border: 1px solid transparent;
}

.nav-item:hover {
    border: #5964ff 1px solid;
}

.btn-destaque {
    background-color: #1800ad;
    width: fit-content;
    transition: ease-in-out 0.3s;
    color: white;

    a {
        color: white !important;
    }
}

.btn-destaque:hover {
    background-color: #5964ff;
    color: white;
}

/* HEADER */


/* Conteúdo Home */

.titulo-home {
    font-family: Lovelo;
    font-size: 3rem;
    font-weight: normal;
    color: #000000;

    span {
        color: #1700ad;
        font-family: Lovelo;
    }

}
.camada-1{
    z-index: 1;
}

.imagem-home {
    width: 100%;
    height: auto;
    display: flex;
    z-index: 5;

    img {
        width: 80%;
        height: auto;
    }
}
.altura{
    display: flex;
    height: 80vh;
    justify-content: center;
}
.largura{
    margin: 0px;
    padding: 0px;
    display: flex;

}

video {
          
    height: 700px;
    border-radius: 15px;
}

spline-viewer{
    height: 700px;
    z-index: 200;
}
/* ajusta o tamanho da imagem e botôes (LOGO e IMG)  */
@media (max-width: 1200px) {
    .hero-home {
        
        margin-bottom: 0px;
        justify-content: center;
        align-items: center;

        button {
            margin: auto;
        }

        img {
            
            margin: auto;
        }
    }

}


@media (max-width: 1200px) {
    .imagem-home {
        width: 100%;
        height: auto;
        display: flex;

        img {
            width: 40%;
            height: auto;
        }
       
    }

}
@media (max-width: 992px) {
    .imagem-home {
        width: 100%;
        height: auto;
        display: flex;

        img {
        
           width: 50%;
        }
    }

}
@media (max-width: 768px) {
    .imagem-home {
        width: 100%;
        height: auto;
        display: flex;

        img {
            width: 70%;
            height: auto;
        }
    }

}

.btn{
    font-family: Roboto;
    font-weight: 500;
    padding: 5px 78px ;
    font-size: 14pt;
    margin-bottom: 10px;

}

/* ----------------------  */

.marquee {
    width: 100%;
    height: 80px;
    margin-top: 50px;
    background-color: #1700ad5d;
    
}
    

/*Footer*/
footer{
    display: flex;
    margin: auto;
    width: 85%;
    height: 300px;

    background-color: #1811AC;
    border-radius: 10px 10px 0px 0px;

    padding: 35px 35px 35px 55px;
    
ul{
    list-style: none;
    margin-top: 20px;
}

ul h1{
    font-family: Roboto;
    font-size: 15pt;
    color: white;
}

li{
    font-family: Roboto;
    font-size: 11pt;
}

li a{
    color: rgba(255, 255, 255, 0.653);
    text-decoration: none;
}

li a:hover{
    color: rgb(255, 255, 255);
    text-decoration: underline;
}
}

.svg-footer-content{
    width: 40%;
    height: 100%;

    background-color: #2a20dd00;
}

.svg-logo-footer{
    width: 150px;
}

.svg-logo-footer img{
    width: 100%;
    height: 100%;


    filter: brightness(0) invert(100%);
}

.svg-social-footer{
    display: flex;
    width: 150px;
    height: 30px;

    background-color: #1e15ce00;

    column-gap: 10px;
}

.svg-social-footer img{
    height: 100%;
    filter: invert();
}

.link-footer{
    display: flex;
    width: 60%;
    height: 100%;

    background-color: rgba(250, 235, 215, 0);

    column-gap: 45px;
}

/*Footer*/

